--- a/views/report.ejs
+++ b/views/report.ejs
@@ -15,16 +15,43 @@
 			<h3 style="text-align:center">
 				<%= records[0].UserName %>'s Report
 			</h3>
+
 			<p>
 				<button class="btn btn-primary" type="button" data-toggle="collapse" data-target="#collapseChart" aria-expanded="false" aria-controls="collapseChart">
 					Overall Performance
 				</button>
 			</p>
+
 			<div class="collapse" id="collapseChart">
 				<div class="card card-body">
 					<canvas id="myChart"></canvas>
 				</div>
+				<button type="button" class="btn btn-primary">
+					Short-term memory
+					<span class="badge badge-light">
+						<%= average[0].shortterm.toFixed(1) %>
+					</span>
+				</button>
+				<button type="button" class="btn btn-success">
+					Recall
+					<span class="badge badge-light">
+						<%= average[0].recall.toFixed(1) %>
+					</span>
+				</button>
+				<button type="button" class="btn btn-danger">
+					Self-efficacy
+					<span class="badge badge-light">
+						<%= average[0].selfefficacy.toFixed(1) %>
+					</span>
+				</button>
+				<button type="button" class="btn btn-warning">
+					Attention
+					<span class="badge badge-light">
+						<%= average[0].attention.toFixed(1) %>
+					</span>
+				</button>
 			</div>
+
 			<table id="myTable" class="table table-hover" cellspacing="0" width="100%">
 				<thead class="thead-dark">
 					<tr>
