--- a/views/report.ejs
+++ b/views/report.ejs
@@ -22,7 +22,7 @@
 				</button>
 			</p>
 
-			<div class="collapse" id="collapseChart">
+			<div class="collapse text-center" id="collapseChart">
 				<div class="card card-body">
 					<canvas id="myChart"></canvas>
 				</div>
